<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/main_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_page"/>

        <item android:id="@+id/CD"
            android:icon="@drawable/ic_deposit"
            android:title="@string/calculator_CD"/>

        <item android:id="@+id/savings"
            android:icon="@drawable/ic_savings"
            android:title="@string/calculator_savings"/>

        <item android:id="@+id/savings_goal"
            android:icon="@drawable/ic_goal"
            android:title="@string/calculator_goal"/>

        <item android:id="@+id/loan_Calculator"
            android:icon="@drawable/ic_loan"
            android:title="@string/calculator_loan"/>

        <item android:id="@+id/investment_Calculator"
            android:icon="@drawable/ic_returns"
            android:title="@string/calculator_investment"/>


        <item android:id="@+id/currency_Calculator"
            android:icon="@drawable/ic_currency"
            android:title="@string/currency_converter"/>
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rating"
                android:title="@string/rate" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/refer" />

            <item android:id="@+id/nav_apps"
                android:icon="@drawable/ic_gallery"
                android:title="@string/more"/>
        </menu>
    </item>
</menu>