<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanModule1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ad_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="@dimen/margin"
        ads:layout_constraintTop_toBottomOf="@id/ad_banner"
        android:scrollbarStyle="insideOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="@string/key_in_your_information"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/label_1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="fill_vertical"
                android:text="@string/loan_label1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body"
                ads:layout_constraintEnd_toStartOf="@+id/user_input1"
                ads:layout_constraintStart_toStartOf="@+id/activity_label"
                ads:layout_constraintTop_toBottomOf="@id/activity_label" />

            <EditText
                android:id="@+id/user_input1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="#e7e7e7"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body"
                ads:layout_constraintEnd_toEndOf="@id/activity_label"
                ads:layout_constraintStart_toEndOf="@+id/label_1"
                ads:layout_constraintTop_toBottomOf="@id/activity_label" />

            <TextView
                android:id="@+id/label_2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="fill_vertical"
                android:text="@string/loan_label2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body"
                ads:layout_constraintEnd_toStartOf="@id/user_input2"
                ads:layout_constraintStart_toStartOf="@id/activity_label"
                ads:layout_constraintTop_toBottomOf="@id/label_1" />

            <EditText
                android:id="@+id/user_input2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="#e7e7e7"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="number"
                android:maxLength="3"

                android:textColor="@android:color/black"
                android:textSize="@dimen/body"
                ads:layout_constraintEnd_toEndOf="@id/activity_label"
                ads:layout_constraintStart_toEndOf="@+id/label_2"
                ads:layout_constraintTop_toBottomOf="@id/user_input1" />

            <TextView
                android:id="@+id/label_3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="fill_vertical"
                android:text="@string/loan_label3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body"
                ads:layout_constraintEnd_toStartOf="@id/user_input3"
                ads:layout_constraintStart_toStartOf="@+id/activity_label"
                ads:layout_constraintTop_toBottomOf="@id/label_2" />

            <EditText
                android:id="@+id/user_input3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:background="#e7e7e7"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/body"
                ads:layout_constraintEnd_toEndOf="@id/activity_label"
                ads:layout_constraintStart_toEndOf="@+id/label_3"
                ads:layout_constraintTop_toBottomOf="@+id/user_input2" />

            <Button
                android:id="@+id/button_calculate"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/green"
                android:text="@string/button_calculate"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/body"
                ads:backgroundTint="@color/green"
                ads:layout_constraintEnd_toStartOf="@id/redo"
                ads:layout_constraintStart_toStartOf="@+id/activity_label"
                ads:layout_constraintTop_toBottomOf="@id/label_3" />

            <Button
                android:id="@+id/redo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@color/red"
                android:text="@string/button_reset"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/body"
                ads:backgroundTint="@color/red"
                ads:layout_constraintEnd_toEndOf="@id/activity_label"
                ads:layout_constraintStart_toEndOf="@+id/button_calculate"
                ads:layout_constraintTop_toBottomOf="@id/user_input3" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start" />
</androidx.drawerlayout.widget.DrawerLayout>